# blackgate

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.loadtest  Dockerfile.production  ENVIRONMENT.md  GRACEFUL_SHUTDOWN.md  INFISICAL_INTEGRATION.md  LOAD_TESTING.md  README.md  blackgate.db  blackgate.db-shm  blackgate.db-wal  cleanup-loadtest.sh  demo-graceful-shutdown.sh  demo_metrics.ps1  deploy.sh  docker-compose.loadtest.yml  docker-compose.production.yml  graceful-reload.sh  graceful-shutdown.sh  rebuild-loadtest.sh  run-loadtest.sh  setup-loadtest.sh  setup-routes.sh  startup.sh  test-graceful-shutdown.sh
.github/: FUNDING.yml
load-test-results/2025-06-08_test_1/: 20250608_161448_baseline_fast_heavy.txt  20250608_161448_baseline_fast_light.txt  20250608_161448_baseline_fast_medium.txt  20250608_161448_baseline_slow.txt  20250608_161448_gateway_fast_heavy.txt  20250608_161448_gateway_fast_light.txt  20250608_161448_gateway_fast_medium.txt  20250608_161448_gateway_mixed_load.txt  20250608_161448_gateway_post_json.txt  20250608_161448_gateway_slow.txt  20250608_161448_summary.md
load-test-results/2025-06-08_test_2/: 20250608_173102_baseline_fast_heavy.txt  20250608_173102_baseline_fast_light.txt  20250608_173102_baseline_fast_medium.txt  20250608_173102_baseline_slow.txt  20250608_173102_gateway_fast_heavy.txt  20250608_173102_gateway_fast_light.txt  20250608_173102_gateway_fast_medium.txt  20250608_173102_gateway_mixed_load.txt  20250608_173102_gateway_post_json.txt  20250608_173102_gateway_slow.txt  20250608_173102_summary.md
load-test-results/2025-06-08_test_3/: 20250608_182350_baseline_fast_heavy.txt  20250608_182350_baseline_fast_light.txt  (+9 more)
scripts/: auth-test.lua  mixed-load.lua  post-test.lua
src/: README.md  env.rs  main.rs  oauth_test_server.rs  test_server.rs
src/auth/: basic.rs  (+5 more)
templates/: dashboard.html  home.html
upstream-test-server/: Cargo.toml  Dockerfile
(+58 files in other folders)
