[package]
name = "blackgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = {version = "4.5.39", features = ["derive"]}
hyper = "1.6.0"
reqwest = "0.12.19"
serde = {version = "1.0.219"}
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls","sqlite"]}
tokio = {version= "1.45.1", features=["full"]}
