[package]
name = "blackgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = {version = "4.5.39", features = ["derive"]}
hyper = "1.6.0"
reqwest = {version = "0.12.19", features = ["json","rustls-tls"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.114"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls","sqlite","chrono"]}
tokio = {version= "1.45.1", features=["full"]}
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
base64 = "0.22"
tower-http = {version = "0.6.6", features=["trace","fs"]}
openapiv3 = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.114"
